--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.7.8
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "mim-api"
+          heroku_app_name: "mimapi"
           heroku_email: ${{secrets.HEROKU_API_MAIL}}
           usedocker: true
         env:
