--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ share/python-wheels/
 *.egg
 MANIFEST
 docker-compose-dev.yml
+.Dockerfile
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
